--- a/src/app/properties/contents/villa-luxueuse-de-700-m4-a-bingerville.mdx
+++ b/src/app/properties/contents/villa-luxueuse-de-700-m4-a-bingerville.mdx
@@ -5,18 +5,14 @@ price: 450000000
 tag: Villa
 image: /properties/p1.webp
 features:
-  - 7 Chambres
-  - 5 Salles de bain
-  - Piscine
-  - Jardin
-  - Vue mer
-  - Garage 3 voitures
+  - Gardien
+  - Parking
+  - Sale de sport
 details:
   Surface: 700 m²
   Chambres: 7
   Salle de bain: 5
   Etage: 2
-  Anneé: 2023
 ---
 
 # Villa Luxueuse de 700 m² à Bingerville
@@ -34,6 +30,12 @@ Cette magnifique villa moderne offre un cadre de vie exceptionnel avec une vue p
 - Jardin paysager
 - Garage pour 3 voitures
 - Système de sécurité avancé
+
+<div className="flex bg-red-400 gap-4 flex-wrap">
+  <img src="/properties/p1.webp" alt="image" className="h-80 aspect-video" />
+  <img src="/properties/p1.webp" alt="image" className="h-80 aspect-video" />
+  <img src="/properties/p1.webp" alt="image" className="h-80 aspect-video" />
+</div>
 
 ## Emplacement
 
