--- a/src/app/properties/contents/terrain-besedi-bryan.mdx
+++ b/src/app/properties/contents/terrain-besedi-bryan.mdx
@@ -1,7 +1,7 @@
 ---
-title: Terrain de 400 m² à la 10ème Tranches  
-description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
-price: 25000000 
+title: Terrain de 500 m² à Bécédi-Brignan
+description: Un terrain bien positionné dans la ville de Bécédi-Brignan, idéal pour votre projet immobilier.  
+price: 6000000 
 tag: Terrain  
 image: /properties/10eme.2.jpg  
 features:  
@@ -10,18 +10,18 @@ features:
   - Terrain nu  
   - Disponible immédiatement  
 details:  
-  Surface: 400 m²  
+  Surface: 500 m²  
   Zone: Résidentielle  
   Accès: Facile aux axes routiers principaux  
 ---
 
-# Terrain de 400 m² à la 10ème Tranches  
+# Terrain de 500 m² à Bécédi-Brignan
 
-Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
+Ce terrain de 500 m², situé dans le quartier de Bécédi-Brignan, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
 
 ## Caractéristiques principales  
 
-- **Surface** : 400 m²  
+- **Surface** : 500 m²  
 - **Zone** : Résidentielle, calme et sécurisée  
 - **Accès** : Facile aux axes routiers principaux  
 - **Papiers** : Tout document fourni (ACD en cours)  
@@ -43,11 +43,11 @@ Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, rep
 
 ## Emplacement  
 
-Le terrain est situé dans la 10ème Tranches, un quartier résidentiel de Bingerville, à proximité :  
+Le terrain est situé à Bécédi-Brignan, à 54 Km d'Abidjan et 25 Km d'Azopé, à proximité :  
 
-- Des écoles internationales  
+- Des écoles   
 - Des commerces et supermarchés  
-- Des axes routiers principaux pour un accès facile à Abidjan (15 minutes du centre-ville)  
+- Des axes routiers principaux pour un accès facile à Abidjan  
 
 ## Pourquoi choisir ce terrain ?  
 
