--- a/src/app/properties/contents/terrain-vridi-ako.mdx
+++ b/src/app/properties/contents/terrain-vridi-ako.mdx
@@ -1,5 +1,5 @@
 ---
-title: Terrain de 700 m² à VRIDI AKO  
+title: Terrain de 500 m² à VRIDI AKO  
 description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
 price: 35000000 
 tag: Terrain  
@@ -10,18 +10,18 @@ features:
   - Terrain nu  
   - Disponible immédiatement  
 details:  
-  Surface: 700 m²  
+  Surface: 500 m²  
   Zone: En Bordure de l'eau 
   Accès: Facile aux axes routiers principaux  
 ---
 
-# Terrain de 700 m² à VRIDI AKO  
+# Terrain de 500 m² à VRIDI AKO  
 
-Ce terrain de 700 m², situé dans le quartier prisé de VRIDI AKO, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
+Ce terrain de 500 m², situé dans le quartier prisé de VRIDI AKO, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
 
 ## Caractéristiques principales  
 
-- **Surface** : 700 m²  
+- **Surface** : 500 m²  
 - **Zone** : En Bordure de l'eau, calme et sécurisée  
 - **Accès** : Facile aux axes routiers principaux  
 - **Papiers** : Tout document fourni (ACD Disponible)  
@@ -42,11 +42,12 @@ Ce terrain de 700 m², situé dans le quartier prisé de VRIDI AKO, représente 
 
 ## Emplacement  
 
-Le terrain est situé dans la 10ème Tranches, un quartier résidentiel de Bingerville, à proximité :  
+Le terrain est situé à VRIDI AKO, un quartier résidentiel, à proximité :  
 
-- Des écoles internationales  
-- Des commerces et supermarchés  
-- Des axes routiers principaux pour un accès facile à Abidjan (15 minutes du centre-ville)  
+- De la lagune, la mer et le lac   
+- Non loin de la base de l'anti-terroriste de l'Afrique de l'ouest.  
+- Dans la zone de la baie des milliardaires
+- Un échangeur du canal de vridi passant par vridi  AKO sortant à Jacqueville 
 
 ## Pourquoi choisir ce terrain ?  
 
