--- a/src/app/properties/contents/terrain-bingerville-agban-akoue-2.mdx
+++ b/src/app/properties/contents/terrain-bingerville-agban-akoue-2.mdx
@@ -1,12 +1,13 @@
 ---
-title: Terrain de 400 m² à la 10ème Tranches  
-description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
+title: Terrain de 400 m² à Bingerville AGBAN Akoue
+description: Un terrain bien positionné dans la zone de Bingerville, idéal pour votre projet immobilier.  
 price: 25000000 
 tag: Terrain  
-image: /properties/10eme.2.jpg  
+image: /properties/binger-5.jpg  
 features:  
-  - ACD global en cours  
-  - Tout papier fourni  
+  - ACD en cours  
+  - Tout papier fourni
+  - site approuvé
   - Terrain nu  
   - Disponible immédiatement  
 details:  
@@ -15,9 +16,9 @@ details:
   Accès: Facile aux axes routiers principaux  
 ---
 
-# Terrain de 400 m² à la 10ème Tranches  
+# Terrain de 400 m² à Bingerville AGBAN Akoue  
 
-Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
+Ce terrain de 400 m², situé dans le quartier de Bingerville AGBAN Akoue, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
 
 ## Caractéristiques principales  
 
@@ -34,11 +35,10 @@ Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, rep
 - **Potentiel** : Idéal pour construire une villa moderne ou un projet immobilier sur mesure.  
 
 <div className="flex bg-red-400 gap-4 flex-wrap">  
-  <img src="/properties/10eme.3.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme4.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
-  <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-
+  <img src="/properties/binger-1.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/binger-2.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/binger-3.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
+  <img src="/properties/binger-4.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
 </div>  
 
 ## Emplacement  
