--- a/src/app/properties/contents/terrain-bingerville-agban-akoue.mdx
+++ b/src/app/properties/contents/terrain-bingerville-agban-akoue.mdx
@@ -1,27 +1,28 @@
 ---
-title: Terrain de 400 m² à la 10ème Tranches  
-description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
-price: 25000000 
+title: Terrain de 500 m² à Bingerville AGBAN Akoue
+description: Un terrain bien positionné dans la zone de Bingerville, idéal pour votre projet immobilier.  
+price: 35000000 
 tag: Terrain  
-image: /properties/10eme.2.jpg  
+image: /properties/binger-7.jpg  
 features:  
-  - ACD global en cours  
-  - Tout papier fourni  
+  - ACD en cours  
+  - Tout papier fourni
+  - site approuvé
   - Terrain nu  
   - Disponible immédiatement  
 details:  
-  Surface: 400 m²  
+  Surface: 500 m²  
   Zone: Résidentielle  
   Accès: Facile aux axes routiers principaux  
 ---
 
-# Terrain de 400 m² à la 10ème Tranches  
+# Terrain de 500 m² à Bingerville AGBAN Akoue  
 
-Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
+Ce terrain de 500 m², situé dans le quartier de Bingerville AGBAN Akoue, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
 
 ## Caractéristiques principales  
 
-- **Surface** : 400 m²  
+- **Surface** : 500 m²  
 - **Zone** : Résidentielle, calme et sécurisée  
 - **Accès** : Facile aux axes routiers principaux  
 - **Papiers** : Tout document fourni (ACD en cours)  
@@ -34,16 +35,16 @@ Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, rep
 - **Potentiel** : Idéal pour construire une villa moderne ou un projet immobilier sur mesure.  
 
 <div className="flex bg-red-400 gap-4 flex-wrap">  
-  <img src="/properties/10eme.3.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme4.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
-  <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/binger-7.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/binger-6.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/binger-5.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
+  <img src="/properties/binger-4.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
 
 </div>  
 
 ## Emplacement  
 
-Le terrain est situé dans la 10ème Tranches, un quartier résidentiel de Bingerville, à proximité :  
+Le terrain est situé dans un quartier résidentiel de Bingerville, à proximité :  
 
 - Des écoles internationales  
 - Des commerces et supermarchés  
