--- a/src/app/properties/contents/terrain-yamoussokro-kami.mdx
+++ b/src/app/properties/contents/terrain-yamoussokro-kami.mdx
@@ -1,28 +1,30 @@
 ---
-title: Terrain de 400 m² à la 10ème Tranches  
-description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
+title: Terrain de 600 m² à Yamoussoukro Kami
+description: Un terrain bien positionné dans la zone de Bingerville, idéal pour votre projet immobilier.  
 price: 25000000 
 tag: Terrain  
-image: /properties/10eme.2.jpg  
+image: /properties/binger-4.jpg  
 features:  
-  - ACD global en cours  
-  - Tout papier fourni  
-  - Terrain nu  
+  - ACD individuel Disponible
+  - Tout papier fourni
+  - site approuvé
+  - Terrain nu
+  - Prix à   revoir
   - Disponible immédiatement  
 details:  
-  Surface: 400 m²  
+  Surface: 600 m²  
   Zone: Résidentielle  
   Accès: Facile aux axes routiers principaux  
 ---
 
-# Terrain de 400 m² à la 10ème Tranches  
+# Terrain de 600 m² à Yamoussoukro Kami  
 
-Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
+Ce terrain de 600 m², situé dans le quartier de Yamoussoukro Kami, représente une opportunité exceptionnelle pour réaliser votre projet immobilier. Idéalement positionné dans une zone résidentielle calme et verdoyante, ce terrain offre un cadre de vie agréable tout en étant proche des commodités essentielles.  
 
 ## Caractéristiques principales  
 
-- **Surface** : 400 m²  
-- **Zone** : Résidentielle, calme et sécurisée  
+- **Surface** : 600 m²  
+- **Zone** : Résidentielle, calme et sécurisée, sur la voie de Tiebissou  
 - **Accès** : Facile aux axes routiers principaux  
 - **Papiers** : Tout document fourni (ACD en cours)  
 - **État** : Terrain nu, prêt à construire  
