--- a/src/app/properties/contents/terrain-10eme-Tranche.mdx
+++ b/src/app/properties/contents/terrain-10eme-Tranche.mdx
@@ -3,7 +3,7 @@ title: Terrain de 400 m² à la 10ème Tranches
 description: Un terrain bien positionné dans la zone de la 10ème Tranches, idéal pour votre projet immobilier.  
 price: 25000000 
 tag: Terrain  
-image: /properties/10eme.2.jpg  
+image: /properties/10-eme-5.jpg  
 features:  
   - ACD global en cours  
   - Tout papier fourni  
@@ -34,9 +34,9 @@ Ce terrain de 400 m², situé dans le quartier prisé de la 10ème Tranches, rep
 - **Potentiel** : Idéal pour construire une villa moderne ou un projet immobilier sur mesure.  
 
 <div className="flex bg-red-400 gap-4 flex-wrap">  
-  <img src="/properties/10eme.3.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme4.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
-  <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
+  <img src="/properties/10-eme-3.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/10-eme-7.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
+  <img src="/properties/10-eme-5.jpg" alt="image" className="w-5/12 h-80 aspect-video" /> 
   <img src="/properties/10eme.2.jpg" alt="image" className="w-5/12 h-80 aspect-video" />  
 
 </div>  
